@@ -18,12 +18,6 @@
 
 #include "ace/config-g++-common.h"
 
-#if defined (ACE_HAS_THREADS)
-#  if !defined (_THREAD_SAFE)
-#    define _THREAD_SAFE
-#  endif /* _THREAD_SAFE */
-#endif
-
 #define ACE_HAS_2_PARAM_ASCTIME_R_AND_CTIME_R
 #define ACE_HAS_3_PARAM_READDIR_R
 #define ACE_HAS_3_PARAM_WCSTOK
@@ -103,44 +97,22 @@
 #define ACE_HAS_XPG4_MULTIBYTE_CHAR
 #define ACE_HAS_SYS_SIGINFO_H
 
-#define ACE_LACKS_CONDATTR_PSHARED
 #define ACE_LACKS_GETIPNODEBYADDR
 #define ACE_LACKS_GETIPNODEBYNAME
-#define ACE_LACKS_GETPGID
-#define ACE_LACKS_IOSTREAM_FX
 #define ACE_LACKS_ISCTYPE
-#define ACE_LACKS_ITOW
-#define ACE_LACKS_LINEBUFFERED_STREAMBUF
-#define ACE_LACKS_LOG2
-#define ACE_LACKS_MALLOC_H
-#define ACE_LACKS_MSG_ACCRIGHTS
-#define ACE_LACKS_MUTEXATTR_PSHARED
+//#define ACE_LACKS_LINEBUFFERED_STREAMBUF
 #define ACE_LACKS_NETDB_REENTRANT_FUNCTIONS
 #define ACE_LACKS_PERFECT_MULTICAST_FILTERING
-#define ACE_LACKS_PRI_T
-#define ACE_LACKS_PTHREAD_THR_SIGSETMASK
-#define ACE_LACKS_RLIMIT_PROTOTYPE
-#define ACE_LACKS_RWLOCK_T
-#define ACE_LACKS_SETPGID
-#define ACE_LACKS_SETREGID
-#define ACE_LACKS_SETREUID
-#define ACE_LACKS_SETSCHED
-#define ACE_LACKS_SIGINFO_H
-#define ACE_LACKS_STDINT_H
 #define ACE_LACKS_STROPTS_H
 #define ACE_LACKS_STRRECVFD
-#define ACE_LACKS_TERMIO_H
-#define ACE_LACKS_THREAD_PROCESS_SCOPING
-#define ACE_LACKS_TIMEDWAIT_PROTOTYPES
 #define ACE_LACKS_TIMESPEC_T
 #define ACE_LACKS_UCONTEXT_H
-#define ACE_LACKS_UNBUFFERED_STREAMBUF
-#define ACE_LACKS_U_LONGLONG_T
-#define ACE_LACKS_WCHAR_H
-#define ACE_LACKS_WCSCASECMP
-#define ACE_LACKS_WCSDUP
-#define ACE_LACKS_WCSNCASECMP
-#define ACE_LACKS_WCSNICMP
+//#define ACE_LACKS_UNBUFFERED_STREAMBUF
+//#define ACE_LACKS_WCSCASECMP
+//#define ACE_LACKS_WCSDUP
+//#define ACE_LACKS_WCSNCASECMP
+//#define ACE_LACKS_WCSNICMP
+#define ACE_LACKS_ISWASCII
 
 #define ACE_EXPLICIT_TEMPLATE_DESTRUCTOR_TAKES_ARGS
 #define ACE_PAGE_SIZE 4096
@@ -159,14 +131,14 @@
 
 // Lacks perfect filtering, must bind group address.
 #if !defined ACE_LACKS_PERFECT_MULTICAST_FILTERING
-# define ACE_LACKS_PERFECT_MULTICAST_FILTERING
+#  define ACE_LACKS_PERFECT_MULTICAST_FILTERING
 #endif /* ACE_LACKS_PERFECT_MULTICAST_FILTERING */
 
 // OpenBSD's dlsym call segfaults when passed an invalid handle.
 // It seems as if most other OSs detect this and just report an error.
 #define ACE_HAS_DLSYM_SEGFAULT_ON_INVALID_HANDLE
 
-#define ACE_SSIZE_T_FORMAT_SPECIFIER_ASCII  "%ld"
+#define ACE_SSIZE_T_FORMAT_SPECIFIER_ASCII "%ld"
 #define ACE_SIZE_T_FORMAT_SPECIFIER_ASCII "%lu"
 
 #include /**/ "ace/post.h"
