@@ -1,3 +1,9 @@
+Mon Mar 21 14:23:46 UTC 2011  Olli Savia  <ops@iki.fi>
+
+        * ace/config-openbsd.h:
+        * include/makeinclude/platform_openbsd.GNU:
+          Improved support for OpenBSD.
+
 Mon Mar 21 12:48:01 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * ace/INET_Addr.cpp:
